--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+    <div class="ui container">
+      <app-sidebar></app-sidebar>
+      <app-article-list></app-article-list>
+    </div> 
