--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,24 +1,26 @@
 <div class="sidebar-container">
-  <div class="ui container visible fixed inverted lest vertical sidebar menu">
+  <div
+    class="ui container visible fixed inverted left vertical sidebar menu">
     <div class='item'>
       <div class='header'>News sources</div>
-    </div>
-    
+    </div> <!-- item -->
+
     <div class='item'>
       <div class='menu'>
-        <a 
+        <a
           class='item news-item'
           *ngFor='let source of sources | async'
-          routerLink='/news/{{source["id"]}}'>
+          routerLink='/news/{{ source["id"] }}'
+          routerLinkActive='active'>
           <span class='side-news-item'>
             <img class='ui avatar image'
-              src='{{ source["urlToLogos"]["small"] }}' />
+              src='{{ source["urlsToLogos"]["small"] }}' />
             <span class='side-news-item'>
-              {{source['name']}}
+              {{ source['name'] }}
             </span>
           </span>
         </a>
-      </div>
-    </div>
-  </div>
-</div>
+      </div> <!-- menu -->
+    </div> <!-- item -->
+  </div> <!-- sidebar menu container -->
+</div> <!-- sidebar-container -->
