--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -38,7 +38,7 @@
       href='#'
       target='_blank'
       class='ui right floated button primary'>
-        Read more.
+        Read more
         <i class='right chevron icon'></i>
     </a>
   </div>
