--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,17 @@
-.pusher{
-    margin-left: 180px;
+/* Mobile */
+.pusher {
+  margin-left: 180px;
 }
 
-@media only screen and (min-width:768px) and (max-width:991px){
-    .pusher{
-        margin-left: 200px;
-    }
+/* Tablet */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .pusher {
+    margin-left: 200px;
+  }
 }
 
-@media only screen and (min-width: 991px){
-    .pusher{
-        margin-left: 260px;
-    }
+@media only screen and (min-width: 991px) {
+  .pusher {
+    margin-left: 260px;
+  }
 }
