--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -1,7 +1,10 @@
-<div class = "ui container">
-  <h2>Articles</h2>
-  <app-article-list-header></app-article-list-header>
+<div class="ui container">
+  <app-article-list-header>
+    </app-article-list-header>
   <div class="ui divided items">
-    <app-article *ngFor="let article of articles | async" [article]="article"> class='item'</app-article>
+    <app-article
+      *ngFor="let article of articles | async"
+      [article]="article"
+      class='item'></app-article>
   </div>
 </div>
