--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
         <a
           class='item news-item'
           *ngFor='let source of sources | async'
-          routerLink='/new/{{ source["id"] }}'
+          routerLink='/news/{{ source["id"] }}'
           routerLinkActive='active'>
           <span class='side-news-item'>
             <img class='ui avatar image'
