read more link to image

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -35,7 +35,7 @@
   </div>
   <div class="extra">
     <a
-      href='#'
+      href='{{article.imageUrl}}'
       target='_blank'
       class='ui right floated button primary'>
         Read more
