link read more to details

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -35,7 +35,7 @@
   </div>
   <div class="extra">
     <a
-      href='{{article.imageUrl}}'
+      href='{{article.url}}'
       target='_blank'
       class='ui right floated button primary'>
         Read more
